--- a/Client/Client/Client/Client.csproj
+++ b/Client/Client/Client/Client.csproj
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="connectDB.cs" />
+    <Compile Include="HttpSend.cs" />
     <Compile Include="index.cs">
       <SubType>Form</SubType>
     </Compile>
